botao search funcionando

--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -65,7 +65,7 @@
                 </div>
                 
             </div>
-            <div class="searchcard"><input type="text"><button><i class="fas fa-search"></i></button></div>
+            <div class="searchcard"><input type="text" id="searchinputapp"><button id="searchbutton"><i class="fas fa-search"></i></button></div>
         </div>
             
         
@@ -84,6 +84,7 @@
     
     <script src="./js/new-card.js" async></script>
     <script src="./js/edit-card.js" async></script>
+    <script src="./js/searchbyparcelapp.js" async></script>
     
 </body>
 </html>
