--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -79,9 +79,8 @@
     </main>
     
     <script src="./js/image-file-functions.js" async></script>
-    <script src="./js/core-functions.js"></script>
+    <script src="./js/core-functions.js"async></script>
     <script src="./js/getpostjson.js" async></script>
-    
     <script src="./js/new-card.js" async></script>
     <script src="./js/edit-card.js" async></script>
     <script src="./js/searchbyparcelapp.js" async></script>
