--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -336,7 +336,7 @@ header div{
     background-image: url("img/antique-texture.jpg");
     margin: 0 0.5vw;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     padding: 2vh 2vh;
     overflow: hidden;
@@ -344,17 +344,21 @@ header div{
     box-shadow: 1px 1px 10px black;
 }
 
-.edit{
+.options{
+    display: flex;
+    justify-content: end;
+    width: 100%;
+}
+
+
+.options button{
     height: 2vw;
     width: 3vw;
-    color: #503925;
+    color: #502e25;
     border: none;
     background-color: transparent;
     font-size: 30px;
     padding: 0;
-    position: relative;
-    text-align: end;
-    vertical-align: top;
 }
 
 .edit:hover{
@@ -363,36 +367,10 @@ header div{
     cursor: pointer;
 }
 
-.exclude{
-    height: 2vw;
-    width: 3vw;
-    color: #502b25;
-    border: none;
-    background-color: transparent;
-    font-size: 28px;
-    padding: 0;
-    position: relative;
-    text-align: end;
-    vertical-align: top;
-}
-
 .exclude:hover{
     transform: scale(1.2);
     transition: 0.5s;
     cursor: pointer;
-}
-
-.send{
-    height: 2vw;
-    width: 3vw;
-    color: #502b25;
-    border: none;
-    background-color: transparent;
-    font-size: 28px;
-    padding: 0;
-    position: relative;
-    text-align: end;
-    vertical-align: top;
 }
 
 .send:hover{
@@ -422,19 +400,19 @@ header div{
 
 .info-card h2:nth-child(1){
     font-weight: 800;
-    font-size: 2.5vh;
+    font-size: 2.7vh;
     color: #202020;
     margin-bottom: 1vh;
 }
 
 .info-card h2:nth-child(2){
     font-weight: 400;
-    font-size: 3vh;
+    font-size: 2.5vh;
     color: #202020;
 }
 
 .info-text{
-    height: 7vh;
+    height: 12vh;
 }
 
 .info-img{
