--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -40,6 +40,18 @@
                     <h2>Username</h2>
                     <h3 id="username"><%= user %></h2>
                 </div>
+               <!--<div class="usertype">
+                    <h2>User type</h2>
+                    <div>
+                        <label for="type1">Type1</label><br>
+                        <input type="radio" value="type1" name="type1" id="type1">
+                    </div>    
+                    <div>
+                            <label for="type2">Type2</label><br>
+                        <input type="radio" value="type2" name="type2" id="type2">
+                    </div>
+                </div>--> 
+
             </div>
 
             <div class="menu-info janela-logs">
