--- a/server/public/css/managerstyle.css
+++ b/server/public/css/managerstyle.css
@@ -318,7 +318,8 @@ body::-webkit-scrollbar-track {
 }
 
 #firstcolumn img{
-    width: 90%;
+    max-width: 80%;
+    max-height: 20vh;
 }
 
 #firstcolumn img:hover{
@@ -332,6 +333,10 @@ body::-webkit-scrollbar-track {
 
 .item div{
     margin-top: 2vh;
+}
+
+.content .values .columns{
+    height: 10vh;
 }
 
 #superusername{
@@ -445,7 +450,6 @@ body::-webkit-scrollbar-track {
 .titleslog li{
     font-size: 3vh;
 }
-
 
 .log{
     display: flex;
