--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -32,26 +32,26 @@
                     <h2>County:</h2>
                     <input type="text" id="county">
                 </div>
-                <div>
-                    <h2>Contagem:</h2>
-                    <h3 class="contador">0</h2>
-                </div>
+                <!--<div class="usertype">
+                    <h2>User type</h2>
+                    <div>
+                        <h3 for="type1">Type1</h3>
+                        <input type="radio" value="username" name="usertype" id="usertype1">
+                    </div>    
+                    <div>
+                        <h3 for="type2">Type2</h3>
+                        <input type="radio" value="username2" name="usertype" id="usertype2">
+                    </div>
+                </div>-->
                 <div>
                     <h2>Username</h2>
                     <h3 id="username"><%= user %></h2>
                 </div>
-               <!--<div class="usertype">
-                    <h2>User type</h2>
-                    <div>
-                        <label for="type1">Type1</label><br>
-                        <input type="radio" value="type1" name="type1" id="type1">
-                    </div>    
-                    <div>
-                            <label for="type2">Type2</label><br>
-                        <input type="radio" value="type2" name="type2" id="type2">
-                    </div>
-                </div>--> 
-
+                <div>
+                    <h2>Contagem:</h2>
+                    <h3 class="contador">0</h2>
+                </div>
+                
             </div>
 
             <div class="menu-info janela-logs">
