--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -40,7 +40,7 @@
             <div class="manager-item"><a href="./searchbycounty"><button><i class="fas fa-search"></i></button></a><h2>Search By County</h2></div>
             <div class="manager-item"><a href="./searchbyuser.html"><button class="add-user"><i class="fas fa-clipboard-list"></i></button></a><h2>My logs</h2></div> 
             <div class="manager-item"><a href="./searchbycounty"><button><i class="fas fa-chart-pie"></i></button></a><h2>Metrics By User</h2></div>
-            <div class="manager-item"><a><button class="add-user"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
+            <div class="manager-item"><a><button class="add-user" id="logoff"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
             
             <div class="manager-item inv"></div>
         </div>
@@ -49,6 +49,6 @@
             
   
 
-    
+    <script src="/js/manager.js"></script>
 </body>
 </html>
