search by rank 1,2,3, by parcel, rowcount etc

--- a/server/views/searchbyparcel.ejs
+++ b/server/views/searchbyparcel.ejs
@@ -25,8 +25,7 @@
     <section class="controller janela">
              <form id="search-form">
                 <h2>Search</h2>
-                <div><label for="user">by rank:</label><input type="text" id="rank" name="rank"></div>
-                <div><label>and by date:</label><input type="date" id="date" name=""></div>
+                <div><label for="parcel">by parcel:</label><input type="text" id="parcelinput" name="parcel"></div>
                 <button class="search-button">SEARCH</button>
             </form>
     </section>
@@ -34,6 +33,6 @@
         <h2 class="username"></h2>
         <div class="itens-container">
         </div>
-    <script src="js/searchbyrankone.js" async></script>
+    <script src="js/searchbyparcel.js" async></script>
 </body>
 </html>
