--- a/server/public/css/managerstyle.css
+++ b/server/public/css/managerstyle.css
@@ -72,6 +72,16 @@ body{
     padding: 4vh 2vw;
 }
 
+.rankinput{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+
+.rankinput label{
+    font-size: 2vh;
+}
+
 .valist-container{
     margin-top: 13vh;
 }
