--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -39,8 +39,9 @@
             <div class="manager-item"><a href="./searchbyrank"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2></div>
             <div class="manager-item"><a href="./searchbycounty"><button><i class="fas fa-search"></i></button></a><h2>Search By County</h2></div>
             <div class="manager-item"><a href="./searchbyuser.html"><button class="add-user"><i class="fas fa-clipboard-list"></i></button></a><h2>My logs</h2></div> 
-            <div class="manager-item inv"></div>
-            <div class="manager-item inv"></div>
+            <div class="manager-item"><a href="./searchbycounty"><button><i class="fas fa-chart-pie"></i></button></a><h2>Metrics By User</h2></div>
+            <div class="manager-item"><a><button class="add-user"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
+            
             <div class="manager-item inv"></div>
         </div>
 
