--- a/server/views/getchecked.ejs
+++ b/server/views/getchecked.ejs
@@ -24,6 +24,8 @@
     </header>
     <section class="controller janela">
              <form id="search-form">
+                <div><label for="user">State:</label><input type="text" id="stateinput" name=""></div>
+                <div><label for="user">County:</label><input type="text" id="countyinput" name=""></div>
                 <button class="search-button">GET</button>
             </form>
     </section>
