js frontend reorganizado

--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -90,12 +90,11 @@
         </div>
     </main>
     
-    <script src="./js/image-file-functions.js" async></script>
-    <script src="./js/core-functions.js"async></script>
-    <script src="./js/getpostjson.js" async></script>
-    <script src="./js/new-card.js" async></script>
-    <script src="./js/edit-card.js" async></script>
-    <script src="./js/searchbyparcelapp.js" async></script>
-    
+    <script src="./js/app/image-file-functions.js" async></script>
+    <script src="./js/app/core-functions.js"async></script>
+    <script src="./js/app/getpostjson.js" async></script>
+    <script src="./js/app/new-card.js" async></script>
+    <script src="./js/app/edit-card.js" async></script>
+    <script src="./js/app/searchbyparcelapp.js" async></script>
 </body>
 </html>
