--- a/server/views/getallusers.ejs
+++ b/server/views/getallusers.ejs
@@ -42,6 +42,6 @@
                 
             
         </div>
-    <script src="js/allusers.js" async></script>
+    <script src="js/manager-programs/allusers.js" async></script>
 </body>
 </html>
