--- a/server/views/getchecked.ejs
+++ b/server/views/getchecked.ejs
@@ -32,6 +32,6 @@
     <section class="program janela">
         <div class="itens-container">
         </div>
-    <script src="js/getchecked.js" async></script>
+    <script src="js/manager-programs/getchecked.js" async></script>
 </body>
 </html>
