--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -38,7 +38,7 @@
 
 
     
-    <script src="/js/loginpage.js" async></script>
+    <script src="/js/app/loginpage.js" async></script>
     
 </body>
 </html>
