--- a/server/views/manager-login-page.ejs
+++ b/server/views/manager-login-page.ejs
@@ -32,7 +32,7 @@
 
 
     
-    <script src="/js/loginpagemanager.js" async></script>
+    <script src="/js/manager-programs/loginpagemanager.js" async></script>
     
 </body>
 </html>
