--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -48,6 +48,6 @@
             
   
 
-    <script src="/js/manager.js"></script>
+    <script src="/js/manager-controllers/manager.js"></script>
 </body>
 </html>
