--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -48,5 +48,5 @@
     </section>
   
 
-    <script src="js/register.js" async></script>
+    <script src="js/manager-programs/register.js" async></script>
 </body>
