--- a/server/views/searchbycounty.ejs
+++ b/server/views/searchbycounty.ejs
@@ -32,6 +32,7 @@
     <section class="program janela">
         <div class="itens-container">
         </div>
-    <script src="js/searchbycounty.js" async></script>
+    <script src="/js/manager-controllers/searchbycounty.js" async></script>
+    <script src="/js/manager-controllers/managerglobalfunctions.js" async></script>
 </body>
 </html>
