--- a/server/views/searchbyparcel.ejs
+++ b/server/views/searchbyparcel.ejs
@@ -33,6 +33,9 @@
         <h2 class="username"></h2>
         <div class="itens-container">
         </div>
-    <script src="js/searchbyparcel.js" async></script>
+    </section>
+
+    <script src="js/manager-programs/manager.js" async></script>
+    <script src="js/manager-controllers/searchbyparcel.js" async></script>
 </body>
 </html>
