--- a/server/views/searchbyrank.ejs
+++ b/server/views/searchbyrank.ejs
@@ -39,6 +39,8 @@
         <h2 class="username"></h2>
         <div class="itens-container">
         </div>
-    <script src="js/searchbyrankone.js" async></script>
+    </section>
+    <script src="js/manager-programs/manager.js" async></script>
+    <script src="js/manager-controllers/searchbyrankone.js" async></script>
 </body>
 </html>
