--- a/server/views/searchbyuser.ejs
+++ b/server/views/searchbyuser.ejs
@@ -34,6 +34,8 @@
         <h2 class="username"></h2>
         <div class="itens-container">
         </div>
-    <script src="js/searchbyuser.js" async></script>
+    
+    <script src="js/manager-programs/manager.js"></script>
+    <script src="js/manager-controllers/searchbyuser.js" async></script>
 </body>
 </html>
