--- a/server/views/userlogs.ejs
+++ b/server/views/userlogs.ejs
@@ -41,6 +41,6 @@
         <div class="logs-container">
     
         </div>
-    <script src="js/getlogs.js" async></script>
+    <script src="js/manager-programs/getlogs.js" async></script>
 </body>
 </html>
