--- a/server/public/css/managerstyle.css
+++ b/server/public/css/managerstyle.css
@@ -548,4 +548,41 @@ body::-webkit-scrollbar-track {
     transform: scale(1.05);
     transition: 0.5s;
 }
+/* metrics */
+.pizzas{
+    display: flex;
+    
+}
 
+.dailyranks-container{
+    margin-top: 10vh;
+    padding: 2vh;
+    background-color: #4e4d4d;
+    border-radius: 3px;
+    margin-bottom: 2vh;
+}
+
+.dailyranks-container h1{
+    font-size: 4vh;
+    font-weight: 800;
+}
+
+.dailyranks-container div{
+    margin-bottom: 1vh;
+}
+
+.monthlyranks-container{
+    padding: 2vh;
+    background-color: #4e4d4d;
+    border-radius: 3px;
+    margin-bottom: 3vh;
+}
+
+.monthlyranks-container h1{
+    font-size: 4vh;
+    font-weight: 800;
+}
+
+.monthlyranks-container div{
+    margin-bottom: 1vh;
+}
