--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -26,11 +26,15 @@
             <div class="menu-info janela-info">
                 <div>
                     <h2>State:</h2>
-                    <input type="text" id="state">
+                    <!--<input type="text" id="state">-->
+                    <select name="states" id="states">
+                    </select>
                 </div>
                 <div>
                     <h2>County:</h2>
-                    <input type="text" id="county">
+                    <select name="counties" id="counties">
+                    </select>
+                    <!--<input type="text" id="county">-->
                 </div>
                 <!--<div class="usertype">
                     <h2>User type</h2>
