--- a/server/public/css/managerstyle.css
+++ b/server/public/css/managerstyle.css
@@ -332,7 +332,7 @@ body{
 }
 
 .contrast{
-    background-color: #808080;
+    background-color: #74726c;
     padding: 0 0.5vh;
     margin: 0 0.5vh;
     border-radius: 3px;
