--- a/server/views/getchecked.ejs
+++ b/server/views/getchecked.ejs
@@ -26,6 +26,7 @@
              <form id="search-form">
                 <div><label for="user">State:</label><input type="text" id="stateinput" name=""></div>
                 <div><label for="user">County:</label><input type="text" id="countyinput" name=""></div>
+                <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
                 <button class="search-button">GET</button>
             </form>
     </section>
