--- a/server/views/searchbycounty.ejs
+++ b/server/views/searchbycounty.ejs
@@ -26,6 +26,7 @@
              <form id="search-form">
                 <h2>Search</h2>
                 <div><label for="county">by county:</label><input type="text" id="countyinput" name="county"></div>
+                <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
                 <button class="search-button">SEARCH</button>
             </form>
     </section>
