--- a/server/views/searchbyrank.ejs
+++ b/server/views/searchbyrank.ejs
@@ -25,13 +25,14 @@
     <section class="controller janela">
              <form id="search-form">
                 <h2>Search</h2>
-                <div><label for="user">by rank:</label><input type="text" id="rank" name="rank"></div>
+                <div><label for="user">By rank:</label><input type="text" id="rank" name="rank"></div>
                 <div class="rankinput"><h3>Rank type:</h3>
                     <div><input type="radio" name="ranktype" value="rank1"><label for="">Rank 1</label></div>
                     <div><input type="radio" name="ranktype" value="rank2"><label for="">Rank 2</label></div>
                     <div><input type="radio" name="ranktype" value="rank3"><label for="">Rank 3</label></div>
                 </div>
-                <div><label>and by date:</label><input type="date" id="date" name=""></div>
+                <div><label>And by date:</label><input type="date" id="date" name=""></div>
+                <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
                 <button class="search-button">SEARCH</button>
             </form>
     </section>
