--- a/server/views/searchbyuser.ejs
+++ b/server/views/searchbyuser.ejs
@@ -25,8 +25,9 @@
     <section class="controller janela">
              <form id="search-form">
                 <h2>Search</h2>
-                <div><label for="user">by user:</label><input type="text" id="user" name=""></div>
-                <div><label>and by date:</label><input type="date" id="date" name=""></div>
+                <div><label for="user">By user:</label><input type="text" id="user" name=""></div>
+                <div><label>And by date:</label><input type="date" id="date" name=""></div>
+                <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
                 <button class="search-button">SEARCH</button>
             </form>
     </section>
