--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -44,6 +44,10 @@
             <div class="manager-nav"><a><button class="add-user" id="logoff"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
         </div>
 
+        <div class="manager-line">
+            <div class="manager-nav"><a href="./searchbyrankresumed"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2><h2>(Without Images)</h2></div>
+        </div>
+
     </section>
             
   
