--- a/server/public/css/managerstyle.css
+++ b/server/public/css/managerstyle.css
@@ -135,6 +135,7 @@ body{
 }*/
 
 /*new manager item*/
+
 .manager-item{
     width: 81vw;
     background-color: #64635e;
@@ -142,6 +143,11 @@ body{
     border-radius: 3px;
     margin-bottom: 2vh;
     transition: 1s;
+    min-height: 30vh;
+}
+
+.program h2{
+    margin: 1vh 0;
 }
 
 .title{
@@ -165,7 +171,8 @@ body{
     display: flex;
     justify-content: space-evenly;
     margin-top: 2vh;
-    height: 18vh;
+    height: 22vh;
+    margin-bottom: 1vh;
 }
 
 .images-row div{
@@ -185,7 +192,7 @@ body{
 .image-row h2{
     font-size: 3vh;
     font-weight: 500;
-    color: rgb(202, 202, 202);
+    color: rgb(0, 0, 0);
 }
 
 .item-columns{
@@ -195,18 +202,17 @@ body{
 }
 
 .accordion{
-    height: 40vh;
+    height: 60vh;
     border-radius: 4px;
-}
-
-.accordion:hover{
-    cursor: pointer;
-    background-color: #74726c;
-    transition: 0.5s;
 }
 
 .hide{
     display: none;
+    margin-top: 2vh;
+}
+
+.column{
+    margin-top: 2vh;
 }
 
 .column div{
@@ -220,26 +226,26 @@ body{
 .column div h2{
     font-size: 3vh;
     font-weight: 500;
-    color: rgb(202, 202, 202);
+    color: rgb(0, 0, 0);
 }
 
 .column h3{
     height: 10vh;
     width: 18vw;
     word-wrap:break-word;
-    color: rgb(29, 29, 29);
+    color: rgb(255, 255, 255);
 }
 
 .rank1 h1{
     font-size: 3vh;
-    color: rgb(202, 202, 202);
+    color: rgb(0, 0, 0);
     font-weight: 600;
 }
 
 .rank1 h2{
     font-size: 2vh;
     font-weight: 500;
-    color: rgb(202, 202, 202);
+    color: rgb(0, 0, 0);
     
 }
 
@@ -249,22 +255,27 @@ body{
     height: 6vh;
     width: 18vw;
     word-wrap:break-word;
-    color: rgb(29, 29, 29);
+    color: rgb(255, 255, 255);
 }
 
 .rank div{
     margin-top: 1vh;
 }
 
+.rank label{
+    color: black;
+    margin-right: 0.2vh;
+}
+
 .rank h1{
     font-size: 3vh;
-    color: rgb(202, 202, 202);
+    color: rgb(0, 0, 0);
     font-weight: 600;
 }
 
 .image-row img{
     max-width: 100%;
-    max-height: 80%;
+    max-height: 70%;
     border-radius: 3px;
 }
 
@@ -296,7 +307,7 @@ body{
 .rank input[type=text]{
     background-color: transparent;
     border: none;
-    border-bottom: 1px white solid;
+    border-bottom: 1px rgb(255, 255, 255) solid;
     color: white;
 }
 
@@ -324,6 +335,7 @@ body{
 
 .rank div h2{
     width: 7vw;
+    color: black;
 }
 
 .rank .buyopt{
@@ -336,11 +348,11 @@ body{
     border-radius: 3px;
     transition: 1s;
 }
-
-.contrast{
-    padding: 0.5vh;
-}
 /*new manager item*/
+
+.manager-window{
+    margin-top: 10vh;
+}
 
 form{
     margin-top: 3vh;
@@ -577,6 +589,7 @@ body::-webkit-scrollbar-track {
     background-color: transparent;
     border: none;
     height: 25vh;
+    margin-bottom:2vh;
 }
 
 #superusername{
