--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -38,14 +38,17 @@
         <div class="manager-line">
             <div class="manager-nav"><a href="./searchbyrank"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2></div>
             <div class="manager-nav"><a href="./searchbycounty"><button><i class="fas fa-search"></i></button></a><h2>Search By County</h2></div>
-            <div class="manager-nav"><a href="./searchbyuser.html"><button class="add-user"><i class="fas fa-clipboard-list"></i></button></a><h2>My logs</h2></div> 
+            <div class="manager-nav"><a href="./searchbyuser.html"><button class="add-user"><i class="fas fa-clipboard-list"></i></button></a><h2>My Logs</h2></div> 
             <div class="manager-nav"><a href="./metrics"><button><i class="fas fa-chart-pie"></i></button></a><h2>Metrics By User</h2></div>
-            <div class="manager-nav"><a href="./getchecked"><button><i class="far fa-check-square"></i></button></a><h2>Get all checked</h2></div>
-            <div class="manager-nav"><a><button class="add-user" id="logoff"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
+            <div class="manager-nav"><a href="./getchecked"><button><i class="far fa-check-square"></i></button></a><h2>Get All Checked</h2></div>
+            <div class="manager-nav"><a href="./searchbyrankresumed"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2><h2>(Without Images)</h2></div>
+            
         </div>
 
         <div class="manager-line">
-            <div class="manager-nav"><a href="./searchbyrankresumed"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2><h2>(Without Images)</h2></div>
+            <div class="manager-nav"><a href="./countycalendar"><button class="add-user" id="county-calendar"><i class="far fa-calendar-alt"></i></button></a><h2>County Calendar</h2></div>
+            <div class="manager-nav"><a><button class="add-user" id="logoff"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
+            
         </div>
 
     </section>
