--- a/server/views/countycalendar.ejs
+++ b/server/views/countycalendar.ejs
@@ -23,30 +23,8 @@
         </div>
     </header>
     <section class="controller janela">
-             <form id="search-form">
-                <div>
-                    <label for="month">Select a month:</label>
-                    <select name="month" id="month">
-                        <option name="month" value="1">01</option>
-                        <option name="month" value="2">02</option>
-                        <option name="month" value="3">03</option>
-                        <option name="month" value="4">04</option>
-                        <option name="month" value="5">05</option>
-                        <option name="month" value="6">06</option>
-                        <option name="month" value="7">07</option>
-                        <option name="month" value="8">08</option>
-                        <option name="month" value="9">09</option>
-                        <option name="month" value="10">10</option>
-                        <option name="month" value="11">11</option>
-                        <option name="month" value="12">12</option>
-                    </select>
-                </div>
-                <div>
-                    <label for="year">And a year:</label>
-                    <select name="year" id="year">
-                        <option name="year" value="2021" selected>2021</option>
-                    </select>
-                </div>
+            <form id="search-form">
+                <div><label>County and state insertion by date:</label><input type="date" id="date" name=""></div>
                 
                 <button class="search-button">SEARCH</button>
             </form>
