--- a/server/views/metrics.ejs
+++ b/server/views/metrics.ejs
@@ -26,7 +26,7 @@
              <form id="search-form">
                  <h2>Metrics by:</h2>
                 <div><label for="user">User</label><input type="text" id="user" name=""></div>
-                <div><label>and by date:</label><input type="date" id="date" name=""></div>
+                <div><label>And by date:</label><input type="date" id="date" name=""></div>
                 <button class="search-button">Metrics</button>
             </form>
     </section>
