--- a/server/views/searchbyparcel.ejs
+++ b/server/views/searchbyparcel.ejs
@@ -25,7 +25,7 @@
     <section class="controller janela">
              <form id="search-form">
                 <h2>Search</h2>
-                <div><label for="parcel">by parcel:</label><input type="text" id="parcelinput" name="parcel"></div>
+                <div><label for="parcel">By parcel:</label><input type="text" id="parcelinput" name="parcel"></div>
                 <button class="search-button">SEARCH</button>
             </form>
     </section>
