--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -36,6 +36,14 @@
                     </select>
                     <!--<input type="text" id="county">-->
                 </div>
+                <div>
+                    <h2>List type:</h2>
+                    <select id="list-type">
+                        <option value="auction">Auction</option>
+                        <option value="struck-off">Struck-Off</option>
+                    </select>
+                </div>
+
                 <!--<div class="usertype">
                     <h2>User type</h2>
                     <div>
@@ -54,6 +62,9 @@
                 <div>
                     <h2>Contagem:</h2>
                     <h3 class="contador">0</h2>
+                </div>
+                <div>
+
                 </div>
                 
             </div>
